tests/paczka1/small_fuzzy/68806147.err
Error in line 12: 3B6XMO2CMMp A666 -2,2
Error in line 7: 3B6XMO2CMMp A666 35,9
